Stop autocomplete options from being cutoff

--- a/app/assets/stylesheets/layouts/home.scss
+++ b/app/assets/stylesheets/layouts/home.scss
@@ -1,6 +1,5 @@
 .header__secondary.home-header {
   position: relative;
-  overflow: hidden;
   h1 {
     color: #ffffff;
     position: relative;
